[tool.poetry]
name = "rpatk"
version = "0.1.0"
description = ""
authors = ["Sheldonimo <bryamalfaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyAutoGUI = "^0.9.53"
pyperclip = "^1.8.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.9"
pyodbc = "^4.0.32"
mysql-connector-python = "^8.0.28"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"